# aiod-rail

./: .buildinfo  .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  configuration.html  docker-compose-dev.yml  docker-compose.yml  genindex.html  index.html  instances.html  managers.html  objects.inv  openapi.json  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  run-dev-docker-env.sh  search.html  searchindex.js
sdk-py/: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  aiod_rail__sdk.ipynb  authenticate.py  publishing.md  pyproject.toml  requirements.txt  sdk_example.ipynb  setup.py  tox.ini
sdk-py/.github/workflows/: python.yml
sdk-py/.openapi-generator/: FILES
sdk-py/OuterRail/: __init__.py  configuration.py
sdk-py/OuterRail/api/: __init__.py  api_client.py  api_response.py  assets_api.py  exceptions.py  experiment_runs_api.py  experiment_templates_api.py  experiments_api.py  rest.py
sdk-py/OuterRail/clients/: __init__.py  api_client.py
sdk-py/OuterRail/experiments/: __init__.py  experiment.py  experiment_run.py  experiment_template.py
sdk-py/OuterRail/instances/: __init__.py  dataset.py  experiment.py  experiment_run.py  experiment_template.py
sdk-py/OuterRail/managers/: __init__.py  asset_manager.py  experiment_manager.py  experiment_run_manager.py  experiment_template_manager.py
sdk-py/OuterRail/models/: __init__.py  address.py  aio_d_entry_read.py  (+18 more)
sdk-py/aiod_rail_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk-py/aiod_rail_sdk_new/: __init__.py  api_client.py
sdk-py/client/: authenticate.py  client.py  dataset_client.py  experiment_client.py  experiment_template_client.py
sdk-py/docs/: AIoDEntryRead.md  Address.md  AssetCardinality.md  AssetSchema.md  AssetsApi.md  Dataset.md  DatasetSize.md  Distribution.md  EnvironmentVar.md  EnvironmentVarDef.md  ExperimentCreate.md  ExperimentResponse.md  ExperimentRunDetails.md  ExperimentRunResponse.md  ExperimentRunsApi.md  ExperimentTemplateCreate.md  ExperimentTemplateResponse.md  ExperimentTemplatesApi.md  ExperimentsApi.md  FileDetail.md  Geo.md  HTTPValidationError.md  Location.md  Location1Inner.md  MLModel.md  Note.md  Platform.md  Publication.md  QueryOperator.md  RailUserResponse.md  RunState.md  RunnableDistribution.md  TaskType.md  TemplateState.md  Text.md  UsersApi.md  ValidationError.md
sdk-py/sphinx-docs/: requirements.txt
sdk-py/test/: test_address.py  test_aio_d_entry_read.py  test_asset_cardinality.py  test_asset_schema.py  test_assets_api.py  test_dataset.py  test_dataset_size.py  test_distribution.py  test_environment_var.py  test_environment_var_def.py  test_experiment_create.py  test_experiment_response.py  test_experiment_run_details.py  test_experiment_run_response.py  test_experiment_runs_api.py  test_experiment_template_create.py  test_experiment_template_response.py  test_experiment_templates_api.py  test_experiments_api.py  test_file_detail.py  test_geo.py  test_http_validation_error.py  test_location.py  test_location1_inner.py  test_ml_model.py  test_note.py  test_platform.py  test_publication.py  test_query_operator.py  test_rail_user_response.py  test_run_state.py  test_runnable_distribution.py  test_task_type.py  test_template_state.py  test_text.py  test_users_api.py  test_validation_error.py
sdk-py/tmp/: pyproject.toml
(+932 files in other folders)
